# LarkListener

./: .gitignore  AGENTS.md  CLAUDE.md  LarkListener.command  README.md  build.sh  config.example.yaml  dev-test.sh  install.sh  manage.sh  pyproject.toml  requirements.txt  run.sh  run_service.py
.codegraph/: .gitignore
docs/superpowers/plans/: 2026-05-27-lark-listener.md  2026-06-04-bot-config-edit.md  2026-06-05-friendly-distribution.md  2026-06-09-agent-operability.md  2026-06-09-on-demand-summarize.md  2026-06-11-chat-classification.md
docs/superpowers/specs/: 2026-05-27-lark-listener-design.md  2026-06-03-trigger-reaction-progress-design.md  2026-06-04-bot-config-edit-design.md  2026-06-05-friendly-distribution-design.md  2026-06-09-agent-operability-design.md  2026-06-09-on-demand-summarize-design.md  2026-06-10-interval-zero-and-table-output-design.md  2026-06-11-chat-classification-design.md
lark_listener/: agent_adapters.py  analyzer.py  binaries.py  chats.py  common.py  config.py  config_cli.py  config_editor.py  doctor.py  fetcher.py  intent.py  main.py  notifier.py  providers.py  service.py  setup_wizard.py  state.py
lark_listener/skills/lark-listener/: SKILL.md
tests/: test_agent_adapters.py  test_analyzer.py  test_binaries.py  test_chats.py  test_config.py  test_config_cli.py  test_config_editor.py  test_doctor.py  test_fetcher.py  test_intent.py  test_main.py  test_notifier.py  test_providers.py  test_service.py  test_setup_wizard.py  test_state.py
