[project]
name = "lark-listener"
version = "0.1.0"
description = "Local background service that polls Feishu for unread messages and sends AI-analyzed summaries"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "ruamel.yaml>=0.18",
]

[project.scripts]
lark-listener = "lark_listener.main:main"
